Added REST endpoint for deploy with manifest method.
